--- a/index.html
+++ b/index.html
@@ -66,25 +66,23 @@
     </div>
     <div class="space"></div>
     <!--card1-->
-<div class="col-xs-6 col-md-12 col-lg-9">
-  <div class="block2" style="padding-left: 55px; padding-right: 55px;"> 
-    <div class="card" style="width: 398px; float: left; margin-right: 30px; margin-bottom: 30px;">
+  <div class="block2" style="padding-left: 55px; padding-right: 55px; display: flex; justify-content: flex-start; flex-wrap: wrap"> 
+    <div class="col-xs-6 col-md-7 col-lg-5">
+    <div class="card" style="margin-bottom: 30px;">
       <div
         class="card-header"
         style="
           font-family: 'Roboto', sans-serif;
           font-size: 16px;
-          text-align: center;
           color: #000000;
-          text-align: left;
         "
       >
         Ваш профиль
       </div>
-      <div class="card-body1">
+      <div class="card-body">
         <p
           class="card-text"
-          style="margin-top: 16px; margin-bottom: 12px; margin-left: 20px; font-family: 'Roboto', sans-serif; font-size: 20px;"
+          style="margin-top: 16px; margin-bottom: 12px; font-family: 'Roboto', sans-serif; font-size: 20px;"
         >
           Сергей Павлович Фролов
       </p>
@@ -93,8 +91,6 @@
           style="
             font-size: 16px;
             color: #000000;
-            width: 398px;
-            margin-left: 20px;
             margin-top: 12px;
           "
         >
@@ -102,11 +98,11 @@
         <span style="font-weight: bold">Специализация:</span> Инвестиционные проблемы экономически развивающихся
           рынков.
         </p>
+        
         <a
           href="#"
           class="btn btn-primary"
           style="
-            margin-left: 20px;
             margin-bottom: 20px;
             font-family: 'Roboto', sans-serif;
             font-size: 16px;
@@ -117,8 +113,10 @@
         >
       </div>
   </div>
+  </div>
     <!--card2-->
-    <div class="card" style="width: 398px; float: left; margin-bottom: 30px;">
+    <div class="col-xs-6 col-md-12 col-lg-4">
+    <div class="card" style="margin-bottom: 30px;">
       <div
         class="card-header"
         style="
@@ -137,7 +135,6 @@
           style="
             font-size: 16px;
             color: #000000;
-            width: 398px;
             margin-left: 20px;
             margin-top: 12px;
             margin-bottom: 20px;
@@ -148,6 +145,7 @@
         <span style="font-weight: bold">Средняя уникальность:</span> 75%.</br>
         <span style="font-weight: bold">Языки работ:</span> русский, английский.<br>
         </p>
+      </div>
       </div>
     </div>
   </div>
